--- a/character/character.html
+++ b/character/character.html
@@ -1441,7 +1441,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         // 심상 관련 텍스트 번역
         const mindTexts = {
             'kr': '심상5',
-            'en': 'Mindscape5',
+            'en': 'Minds5',
             'jp': '心象5'
         };
         // 심상 텍스트 번역은 battle-plus-stats에서 제외 (이미 처리됨)
@@ -1499,7 +1499,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 
         // 심상 라벨 번역
         const mindLabel = currentLang === 'kr' ? '심상 (LV 5)' :
-                         currentLang === 'en' ? 'Mind (LV 5)' : '心象 (LV 5)';
+                         currentLang === 'en' ? 'Mindscape (LV 5)' : '心象 (LV 5)';
         const mindTitleEl = document.querySelector('.skill-mind-settings .setting-section:last-child h3');
         if (mindTitleEl) mindTitleEl.innerHTML = mindLabel + ' ' + createHelpIcon('mind-lv5');
 
