--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@ alternate_urls:
             <h2 id="popular-characters-title">인기 괴도</h2>
             <div class="character-cards">
                 <div class="character-card">
+                    <div class="character-card-img"><a href="./character.html?name=미유·여름&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미유·여름.webp" alt="미유·여름"></a></div>
+                    <div class="character-card-text"><p>미유·여름</p></div>
+                </div>
+                <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=미나미·여름&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미나미·여름.webp" alt="미나미·여름"></a></div>
                     <div class="character-card-text"><p>미나미·여름</p></div>
                 </div>
@@ -173,12 +177,8 @@ alternate_urls:
                     <div class="character-card-text"><p>시카노 이치고</p></div>
                 </div>
                 <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=사나다&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/사나다.webp" alt="사나다"></a></div>
-                    <div class="character-card-text"><p>사나다 아키히코</p></div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=유카리&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/유카리.webp" alt="유카리"></a></div>
-                    <div class="character-card-text"><p>타케바 유카리</p></div>
+                    <div class="character-card-img"><a href="./character.html?name=리코·매화&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/리코·매화.webp" alt="리코·매화"></a></div>
+                    <div class="character-card-text"><p>리코·매화</p></div>
                 </div>
                 <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=마나카&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카"></a></div>
