--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -217,6 +217,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                     <li>This tier list is created by the lufel.net. Individual standards may vary, so please use it for reference and entertainment only.</li>
                     <li>Assumes LV80, all skill levels, and all values are basically set except for Awareness.</li>
                     <li>Written with competitive content in mind, tiers may continuously change with version updates.</li>
+                    <li>Global servers may differ from KR tiers because characters are buffed.</li>
                 </ul>
             </div>
             <!-- Japanese -->
@@ -225,6 +226,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                     <li>このティアリストはlufel.netが作成したものです。個人によって基準は異なる場合がありますので、参考と娯楽としてのみご覧ください。</li>
                     <li>LV80、すべてのスキルレベルなど、意識（Awareness）を除くすべての値が基本的に設定されている場合を指します。</li>
                     <li>競争コンテンツを中心に作成されており、バージョンアップデートによってティアは継続的に変動する可能性があります。</li>
+                    <li>グローバルサーバーはキャラクターがバフされているため、KRティアとは異なる場合があります。</li>
                 </ul>
             </div>
         </div>
