--- a/apps/article/index.html
+++ b/apps/article/index.html
@@ -151,7 +151,7 @@ custom_css: article
             },
             'jp': {
                 title: '記事 - ペルソナ5 ザ・ファントム X LufelNet',
-                description: 'ペルソナ5 ザ・ファントム X関連のガイドとヒントをご確認ください。ダメージ計算、キャラクター育成など様々な情報を提供します。'
+                description: 'ペルソナ5 ザ・ファントム X関連のガイドとヒントをご確認ください。ダメージ計算、怪盗育成など様々な情報を提供します。'
             }
         };
         
