--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -473,7 +473,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
             '의식:': '意識:',
             '순서:': '順序:',
             '주 계시:': '宙:',
-            '일월성진:': '日月星辰:',
+            '일월성진:': '旭月星天:',
             '해명 -': '解明 -'
           }
         };
