--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -804,7 +804,7 @@ class TacticsViewer {
                 prev: '前',
                 next: '次',
                 upload: 'タクティクスをアップロード',
-                filter_char: 'キャラクターフィルター',
+                filter_char: '怪盗フィルター',
                 signed_in_as: 'ログイン：',
                 logout: 'ログアウト',
                 type: { '흉몽': 'ナイトメア', '바다': '魂の海', '이벤트': 'イベント', '기타': 'その他' }
