--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ alternate_urls:
                     menu_character_desc_mobile: "{{ site.data.i18n.jp.menu_character_desc_mobile | default: '怪盗別育成戦略をご紹介します' }}",
                     menu_persona_desc_desktop: "{{ site.data.i18n.jp.menu_persona_desc_desktop | default: 'コアペルソナ推薦と共に<br>各ペルソナに合うスキル設定まで' }}",
                     menu_persona_desc_mobile: "{{ site.data.i18n.jp.menu_persona_desc_mobile | default: 'コアペルソナ推薦とスキル設定まで' }}",
-                    menu_revelations_desc_desktop: "{{ site.data.i18n.jp.menu_revelations_desc_desktop | default: '啓示情報を一目で！<br>属性別、日月星辰別にお好みに合わせてマッチング' }}",
+                    menu_revelations_desc_desktop: "{{ site.data.i18n.jp.menu_revelations_desc_desktop | default: '啓示情報を一目で！<br>属性別、旭月星天別にお好みに合わせてマッチング' }}",
                     menu_revelations_desc_mobile: "{{ site.data.i18n.jp.menu_revelations_desc_mobile | default: '啓示情報を一目で！' }}",
                     menu_tactic_desc_desktop: "{{ site.data.i18n.jp.menu_tactic_desc_desktop | default: '自分だけのタクティクスを作成・共有し、<br>海と悪夢で高スコアを獲得しましょう' }}",
                     menu_tactic_desc_mobile: "{{ site.data.i18n.jp.menu_tactic_desc_mobile | default: '自分だけのタクティクスを作成・共有しましょう' }}",
@@ -749,7 +749,7 @@ alternate_urls:
             },
             'jp': {
                 title: 'ペルソナ5 ザ・ファントム X - LufelNet',
-                description: 'ペルソナ5 ザ・ファントム Xの総合攻略サイト。キャラクター、ペルソナ、スキル、戦略ガイドを一箇所で確認できます。'
+                description: 'ペルソナ5 ザ・ファントム Xの総合攻略サイト。怪盗、ペルソナ、スキル、戦略ガイドを一箇所で確認できます。'
             }
         };
         
