--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -226,7 +226,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                     <li>このティアリストはlufel.netが作成したものです。個人によって基準は異なる場合がありますので、参考と娯楽としてのみご覧ください。</li>
                     <li>LV80、すべてのスキルレベルなど、意識（Awareness）を除くすべての値が基本的に設定されている場合を指します。</li>
                     <li>競争コンテンツを中心に作成されており、バージョンアップデートによってティアは継続的に変動する可能性があります。</li>
-                    <li>グローバルサーバーはキャラクターがバフされているため、KRティアとは異なる場合があります。</li>
+                    <li>グローバルサーバーは怪盗がバフされているため、KRティアとは異なる場合があります。</li>
                 </ul>
             </div>
         </div>
@@ -365,7 +365,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                 filter_position: "{{ site.data.i18n.jp.filter_position | default: '職業' }}",
                 filter_rarity: "{{ site.data.i18n.jp.filter_rarity | default: 'タイプ' }}",
                 filter_tag: "{{ site.data.i18n.jp.filter_tag | default: 'タグ' }}",
-                help_message: "* キャラクターをダブルクリックして意識を設定してください。"
+                help_message: "* 怪盗をダブルクリックして意識を設定してください。"
             }
         };
         
@@ -537,7 +537,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                 '지속 대미지': '持続ダメージ',
                 '방어력 감소': '防御力減少',
                 '관통': '貫通',
-                '효과 명중': '効果命中',
+                '효과 명중': '状態異常命中',
                 '실드': 'シールド',
                 '화상': '火傷',
                 '풍습': '風習',
@@ -712,10 +712,10 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
             },
             'jp': shouldLoadList ? {
                 title: 'ティアリスト - ペルソナ5 ザ・ファントム X LufelNet',
-                description: 'P5Xキャラクターのポジション別ティアリストを確認してください。'
+                description: 'P5X怪盗のポジション別ティアリストを確認してください。'
             } : {
                 title: 'ティアメーカー - ペルソナ5 ザ・ファントム X LufelNet',
-                description: 'ポジション別にP5Xキャラクターティアを作ってみましょう。'
+                description: 'ポジション別にP5X怪盗ティアを作ってみましょう。'
             }
         };
         
