--- a/tier/index.html
+++ b/tier/index.html
@@ -328,7 +328,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                 '지속 대미지': '持続ダメージ',
                 '방어력 감소': '防御力減少',
                 '관통': '貫通',
-                '효과 명중': '効果命中',
+                '효과 명중': '状態異常命中',
                 '실드': 'シールド',
                 '화상': '火傷',
                 '풍습': '風習',
