--- a/index.html
+++ b/index.html
@@ -554,7 +554,9 @@ alternate_urls:
             'menu-character-btn': data.menu_goto,
             'menu-persona-btn': data.menu_goto,
             'menu-revelations-btn': data.menu_goto,
-            'menu-tactic-btn': data.menu_goto
+            'menu-tactic-btn': data.menu_goto,
+            'menu-article-btn': data.menu_goto,
+            'menu-tier-btn': data.menu_goto
         };
         
         Object.keys(buttons).forEach(id => {
