--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -18,7 +18,8 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
     <div class="header-container">
         <h1 id="plannerTitle">Progression Calculator</h1>
         <div class="planner-toolbar">
-            <button id="addCharacterBtn" class="primary-btn">+ <span data-lang-key="addCharacter">캐릭터 추가</span></button>
+            <button id="resetBtn" class="primary-btn" style="padding: 8px 10px;">초기화</button>
+            <button id="addCharacterBtn" class="primary-btn">+ <span data-lang-key="addCharacter">캐릭터 추가</span></button>     
             <!--
             <label class="spoiler-toggle" id="spoilerContainer" style="display:none;">
                 <input type="checkbox" id="spoilerToggle">
