--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -217,8 +217,8 @@ function updateSEOContent() {
             description: 'Persona 5: The Phantom X character progression material calculator (level/weapon/skill/mindscape)'
         },
         'jp': {
-            title: '育成計算機 - ペルソナ5 ザ・ファントムX ルフェルネット',
-            description: 'ペルソナ5 ザ・ファントムX キャラクター育成素材計算機（レベル/武器/スキル/心象）'
+            title: '育成計算機 - ペルソナ5 ザ・ファントムX LufelNet',
+            description: 'ペルソナ5 ザ・ファントムX キャラクター育成素材計算機（レベル／武器／スキル／心象）'
         }
     };
     
