--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ alternate_urls:
                     guide_city: "{{ site.data.i18n.jp.guide_city | default: '都市生活' }}",
                     guide_growth: "{{ site.data.i18n.jp.guide_growth | default: '育成・資源' }}",
                     guide_battle: "{{ site.data.i18n.jp.guide_battle | default: '戦闘・パレス' }}",
-                    tactic_workshop: "{{ site.data.i18n.jp.tactic_workshop | default: 'タクティクス図書館' }}",
+                    tactic_workshop: "{{ site.data.i18n.jp.tactic_workshop | default: 'タクティクスライブラリー' }}",
                     show_more: "{{ site.data.i18n.jp.show_more | default: 'もっと見る' }}"
                 }
             };
