--- a/apps/tactic/tactic-upload.html
+++ b/apps/tactic/tactic-upload.html
@@ -570,8 +570,8 @@ const translations = {
         region: '地域 *',
         tactic_type: 'タクティックタイプ *',
         select_please: '選択してください',
-        nightmare: 'ナイトメア',
-        sea: '海',
+        nightmare: '兇夢', // 閼兇夢の扉
+        sea: '兇夢',
         event: 'イベント',
         other: 'その他',
         title: 'タイトル *',
