--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -121,6 +121,7 @@ alternate_urls:
                             <li>김*환</li>
                             <li>카미유</li>
                             <li>ochette</li>
+                            <li>kai</li>
                         </ul>
                     </div>
                 </div>
