before tactic turn + 2

--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -475,7 +475,7 @@ class TacticsViewer {
         const map = {
             kr: { '흉몽': '흉몽', '바다': '바다', '이벤트': '이벤트', '기타': '기타' },
             en: { '흉몽': 'NTMR', '바다': 'SoS', '이벤트': 'Event', '기타': 'ETC' },
-            jp: { '흉몽': '兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' }
+            jp: { '흉몽': '閼兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' }
         };
         const label = (map[this.currentLang] || map.kr)[type] || type;
         return `<span class="type-badge">${label}</span>`;
@@ -673,7 +673,7 @@ class TacticsViewer {
         if (this.currentLang === 'en') {
             return { ALL: 'All', '흉몽': 'NTMR', '바다': 'SoS', '이벤트': 'Event', '기타': 'ETC' };
         } else if (this.currentLang === 'jp') {
-            return { ALL: '全体', '흉몽': '兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' };
+            return { ALL: '全体', '흉몽': '閼兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' };
         }
         return { ALL: '전체', '흉몽': '흉몽', '바다': '바다', '이벤트': '이벤트', '기타': '기타' };
     }
@@ -807,7 +807,7 @@ class TacticsViewer {
                 filter_char: '怪盗フィルター',
                 signed_in_as: 'ログイン：',
                 logout: 'ログアウト',
-                type: { '흉몽': '兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' }
+                type: { '흉몽': '閼兇夢', '바다': '心の海', '이벤트': 'イベント', '기타': 'その他' }
             }
         }[this.currentLang] || {
             search: '제목 검색...', ranking: '순위', weekly: '주간', monthly: '월간', alltime: '역대', title: '택틱 도서관', nav_home: '홈', nav_current: '택틱 / 택틱 도서관', prev: '이전', next: '다음', upload: '택틱 업로드', filter_char: '캐릭터 필터', type: { '흉몽': '흉몽', '바다': '바다', '이벤트': '이벤트', '기타': '기타' }
