--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -312,7 +312,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
           <div class="party-images-container">
             <div class="party-images"></div>
           </div>
-          <div class="madeby">.</div>
+          <!--<div class="madeby">.</div>-->
         </div>
 
         <!-- turn area (6 turns) -->
@@ -1330,7 +1330,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
     <script>
       // Mobile accordion for Wonder and Party cards
       (function(){
-        const svgArrow = '<svg width="12px" height="12px" viewBox="-19.04 0 75.804 75.804" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff" stroke-width="1.13706"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g id="Group_65" data-name="Group 65" transform="translate(-831.568 -384.448)"><path id="Path_57" data-name="Path 57" d="M833.068,460.252a1.5,1.5,0,0,1-1.061-2.561l33.557-33.56a2.53,2.53,0,0,0,0-3.564l-33.557-33.558a1.5,1.5,0,0,1,2.122-2.121l33.556,33.558a5.53,5.53,0,0,1,0,7.807l-33.557,33.56A1.5,1.5,0,0,1,833.068,460.252Z" fill="#ffffff"></path></g></g></svg>';
+        const svgArrow = '<svg width="8px" height="8px" viewBox="-19.04 0 75.804 75.804" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff" stroke-width="1.13706"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g id="Group_65" data-name="Group 65" transform="translate(-831.568 -384.448)"><path id="Path_57" data-name="Path 57" d="M833.068,460.252a1.5,1.5,0,0,1-1.061-2.561l33.557-33.56a2.53,2.53,0,0,0,0-3.564l-33.557-33.558a1.5,1.5,0,0,1,2.122-2.121l33.556,33.558a5.53,5.53,0,0,1,0,7.807l-33.557,33.56A1.5,1.5,0,0,1,833.068,460.252Z" fill="#ffffff"></path></g></g></svg>';
         const isMobile = () => window.innerWidth <= 768;
         function setupAccordion(cardId){
           const card = document.getElementById(cardId);
